# ros-python3

./: CMakeLists.txt  README.md  pyconfig.h
Include/: Python.h  longintrepr.h  pymath.h  pyport.h  pystrcmp.h
Modules/: main.c  posixmodule.c  posixmodule.h
Objects/: abstract.c  bytesobject.c  complexobject.c  exceptions.c  longobject.c  object.c  obmalloc.c  unicodeobject.c
Objects/stringlib/: fastsearch.h
PC/: config.c  getpathp.c  msvcrtmodule.c  pyconfig.h  python3.def  python34stub.def  winreg.c
Parser/: grammar.c
Python/: dynload_win.c
